--- a/javascript_object.html
+++ b/javascript_object.html
@@ -53,9 +53,10 @@ library.sort(function (a, b) {
   return 0;
 });
 
+// var newLibrary = library.sort();
+// console.log(newLibrary);
+
 console.log(library);
-
-
 
         </script>
     </head>
