--- a/isMerge.html
+++ b/isMerge.html
@@ -35,7 +35,9 @@ if (part1.length > part2.length){
 
 }
 
-console.log(isMerge('codewars', 'code', 'wars'));
+
+
+// console.log(isMerge('codewars', 'code', 'wars'));
 console.log(isMerge('codewars', 'cdw', 'oears'));
 console.log(isMerge('codewars', 'cod', 'wars'));
 </script>
